--- a/src/stylesheets/Header.css
+++ b/src/stylesheets/Header.css
@@ -12,3 +12,18 @@
     display: flex;
     justify-content: flex-end;
 }
+
+.header-links a {
+    text-decoration: none;
+    font-family: sans-serif;
+    color: #333331;
+    margin-right: 20px;
+}
+
+.header-links a > i {
+    margin-right: 5px;
+}
+
+.social-icons i {
+    margin-right: 10px;
+}
