Update logo and header links styles

--- a/src/stylesheets/Header.css
+++ b/src/stylesheets/Header.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800;900&family=Open+Sans:ital,wght@0,400;0,500;0,600;0,700;0,800;1,400&family=Roboto:ital,wght@0,400;0,500;0,700;0,900;1,400;1,500&display=swap');
+
 * {
     margin: 0;
     padding: 0;
@@ -15,9 +17,13 @@
 
 .header-links a {
     text-decoration: none;
-    font-family: sans-serif;
-    color: #333331;
+    color: #a7a731;
     margin-right: 20px;
+}
+
+.header-links a span {
+    font-family: 'Inter', sans-serif;
+    font-size: 13px;
 }
 
 .header-links a > i {
@@ -26,4 +32,13 @@
 
 .social-icons i {
     margin-right: 10px;
+}
+
+.logo {
+    margin-top: 20px;
+}
+
+.logo img {
+    height: 95%;
+    width: 16%;
 }
